<resources>
    <string name="app_name">QuotesPeterLyrene</string>
    <string name="login_error_message">Problem with authentication</string>
    <string name="login_error_title">Error!</string>
    <string name="category_title">Food Categories</string>
    <string name="category_subtitle">Click on one of the following list items</string>
    <string name="attributed">Attributed</string>
    <string name="date_added">Date added</string>
    <string name="birthdate">Date of Birth</string>
    <string name="short_quote">Short Quote</string>
    <string name="full_quote">Full Quote</string>
    <string name="ref">Reference</string>
    <string name="quote_title">Quote about</string>
    <string name="blurb_title">About the attributed</string>
    <string name="dismiss">Dismiss</string>
    <string name="about">About</string>
    <string name="random">Random quote</string>
    <string name="last">Last quote viewed</string>
    <string name="about_header">About this application</string>
    <string name="about_body">
        This application contains various quotes about food.
        \n\nOn the main screen, you can tap a category to view its related quotes.
        Tapping on a short quote will display the full quote, and information about who said it.
        Tapping on the quote attribution will display a small blurb about who originally said it.
        Tapping on the \"Reference\" link will open a web browser, displaying the page this quote
        was found on.
        \n\nThe options menu, visible by tapping the three dots at the top
        of any page, contains a number of options. The \"About\"
        option will display the page you are viewing right now! The \"Random quote\" option will
        display a random quote from a random category. The \"Last quote viewed\" option will display
        the last quote you have seen. \n
    </string>
    <string name="about_authors">Created by Lyrene Labor and Peter Bellefleur</string>
    <string name="random_cat">a random subject</string>
</resources>
