<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/about_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_header" />

    <TextView
        android:id="@+id/about_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_body" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:scaleType="centerInside"
        android:src="@drawable/about"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_authors"/>

</LinearLayout>