<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/quoteTitle"
            style="@style/textmain_style.categorytitle_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quote_title"/>

        <ImageView
            android:id="@+id/categoryImg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/attributedLbl"
                style="@style/textmain_style.quoteStyle.quoteLbl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/attributed"/>
            <TextView
                android:id="@+id/attributedTxt"
                style="@style/textmain_style.quoteStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/birthdateLbl"
                style="@style/textmain_style.quoteStyle.quoteLbl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/birthdate"/>
            <TextView
                android:id="@+id/birthdateTxt"
                style="@style/textmain_style.quoteStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quoteFullLbl"
                style="@style/textmain_style.quoteStyle.quoteLbl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/full_quote"/>
            <TextView
                android:id="@+id/quoteFullTxt"
                style="@style/textmain_style.quoteStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateLbl"
                style="@style/textmain_style.quoteStyle.quoteLbl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/date_added"/>
            <TextView
                android:id="@+id/dateTxt"
                style="@style/textmain_style.quoteStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>

        <TextView
            android:id="@+id/refTxt"
            style="@style/textmain_style.quoteStyle"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ref"/>
    </LinearLayout>
</LinearLayout>